--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: seonggki <seonggki@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/01/24 17:30:50 by seonggki          #+#    #+#              #
-#    Updated: 2022/01/27 16:07:04 by seonggki         ###   ########.fr        #
+#    Updated: 2022/02/03 19:27:19 by seonggki         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,8 +16,6 @@ CC = clang++ -std=c++98
 
 CFLAGS = -Wall -Wextra -Werror
 
-INCLUDES = -I Zombie.hpp
-
 SRCS = Zombie.cpp \
 		ZombieHorde.cpp \
 		main.cpp
@@ -25,10 +23,10 @@ SRCS = Zombie.cpp \
 OBJS = $(SRCS:.cpp=.o)
 
 %.o : %.cpp
-	$(CC) $(CFLAGS) $(INCLUDES) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
 $(NAME): $(OBJS)
-	$(CC) $(CFLAGS) $(INCLUDES) $(OBJS) -o $(NAME)
+	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
 
 all: $(NAME)
 
