--- a/cpp03/ex03/Makefile
+++ b/cpp03/ex03/Makefile
@@ -1,6 +1,6 @@
 NAME		=	DiamondTrap
 CP			=	c++ -std=c++98
-CPFLAGS		=	-Wall -Wextra -Werror
+//CPFLAGS		=	-Wall -Wextra -Werror
 
 SRC			=	main.cpp \
 				ClapTrap.cpp \
