--- a/cpp05/ex00/Makefile
+++ b/cpp05/ex00/Makefile
@@ -1,6 +1,6 @@
 NAME		=	Bureaucrat
 CXX			=	c++ -std=c++98
-//CXXFLAGS	=	-Wall -Wextra -Werror
+CXXFLAGS	=	-Wall -Wextra -Werror
 
 SRC			=	main.cpp \
 				Bureaucrat.cpp \
