--- a/cpp07/ex00/Makefile
+++ b/cpp07/ex00/Makefile
@@ -1,14 +1,9 @@
-NAME		=	execForms
+NAME		=	whatever
 CXX			=	c++
-CXXFLAGS	=	-Wall -Wextra -Werror
+CXXFLAGS	=	-Wall -Wextra -Werror -std=c++98
 
-SRC			=	Bureaucrat.cpp \
-				Form.cpp \
-				PresidentialPardonForm.cpp \
-				RobotomyRequestForm.cpp \
-				ShrubberyCreationForm.cpp \
-				main.cpp
-
+SRC			=	main.cpp \
+				
 RM			=	rm -rf
 
 OBJ			=	$(SRC:.cpp=.o)
