--- a/cpp07/ex02/Makefile
+++ b/cpp07/ex02/Makefile
@@ -1,6 +1,6 @@
 NAME		=	Array
 CXX			=	c++
-CXXFLAGS	=	-Wall -Wextra -Werror -std=c++98
+//CXXFLAGS	=	-Wall -Wextra -Werror -std=c++98
 
 SRC			=	main.cpp \
 				
